@@ -1,3 +1,5 @@
+This file is licensed under the terms of the expat license, see the file EXPAT.
+
 It is 4 spaces, no tabs, preferrably at 80 columns per line.
 
 The preferred coding style is explained by example.
