@@ -1,3 +1,4 @@
+# This file is licensed under the terms of the expat license, see the file EXPAT.
 # Register ourselves to autoconf
 AC_INIT([midori], [0.0.21], [http://www.twotoasts.de/bugs])
 AC_CONFIG_SRCDIR([midori/midori-stock.h])
