@@ -1,7 +1,7 @@
 /*
 :Author: Christian Dywan
 :Contact: christian@twotoasts.de
-:Copyright: This stylesheet has been placed in the public domain.
+:Copyright: This file is licensed under the terms of the expat license, see the file EXPAT.
 
 Stylesheet for Midori's documentation based on a version of Enrico Troeger.
 */
