@@ -1,5 +1,6 @@
 #! /usr/bin/env python
 # WAF build script for midori
+# This file is licensed under the terms of the expat license, see the file EXPAT.
 
 def add_image (bld, install_files, category, name):
     import os
