@@ -1,5 +1,6 @@
 #! /usr/bin/env python
 # WAF build script for midori
+# This file is licensed under the terms of the expat license, see the file EXPAT.
 
 obj = bld.create_obj ('cc', 'program')
 obj.target = 'midori'
