@@ -1,3 +1,5 @@
+This file is licensed under the terms of the expat license, see the file EXPAT.
+
 v0.0.21:
  + Update some translations
  + Show progress in location when statusbar is hidden
